--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1400,6 +1400,17 @@ config EXECPROG_WAIT_FOR
 
 endif
 
+config BOOT_CONFIG
+	bool "Boot config support"
+	select LIBXBC
+	default y
+	help
+	  Extra boot config allows system admin to pass a config file as
+	  complemental extension of kernel cmdline when booting.
+	  The boot config file is usually attached at the end of initramfs.
+
+	  If unsure, say Y.
+
 choice
 	prompt "Compiler optimization level"
 	default CC_OPTIMIZE_FOR_PERFORMANCE_O3 if (GCC_VERSION >= 100000 || CC_IS_CLANG)
