drivers: staging: ksu: Hardcode version
Signed-off-by: TogoFire <togofire@mailfence.com>
Change-Id: I32aae65acc5ffc6a57bb5312dcd1e64de47b6508

--- a/drivers/staging/ksu/Makefile
+++ b/drivers/staging/ksu/Makefile
@@ -29,7 +29,7 @@ endif
 obj-$(CONFIG_KSU) += kernelsu.o
 
 # KSU Version
-$(eval KSU_VERSION=)
+$(eval KSU_VERSION=12998)
 $(info -- KernelSU version: $(KSU_VERSION))
 ccflags-y += -DKSU_VERSION=$(KSU_VERSION)
 
