--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,13 @@ out/
 
 # Clang's compilation database file
 /compile_commands.json
+
+
+# Ignore stuff
+AnyKernel3/
+changelog/
+dtb*
+environment/
+error.*
+toolchains/
+work/
