--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -328,6 +328,6 @@ endmenu
 
 config BLOCK_UNWANTED_FILES
 	bool "Allow blocking files from executing from kernel"
-	default y
+	default n
 	help
 	  This option allows you to make files from certain folders un-openable.
