sched/pelt: Add 10ms half-life
Signed-off-by: TogoFire <togofire@mailfence.com>
Change-Id: I1f2459d7fbf46684fa9217553566985da9acf7cc

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -868,6 +868,9 @@ config PELT_UTIL_HALFLIFE_16
 config PELT_UTIL_HALFLIFE_12
 	bool "12 ms"
 
+config PELT_UTIL_HALFLIFE_10
+	bool "10 ms"
+
 config PELT_UTIL_HALFLIFE_8
 	bool "8 ms"
 
